# bicycle_engine

./: CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/query_display/: CMakeLists.txt  main.cpp
apps/show_image/: CMakeLists.txt  main.cpp
apps/showcase/: CMakeLists.txt  showcase.cpp
cmake/: checks.cmake
experiments/: CMakeLists.txt
experiments/asio/: CMakeLists.txt  README.md  completion_token.cpp  simple_callback.cpp  slow_device.hpp
experiments/coroutines/: CMakeLists.txt  co-await.cpp  main.cpp  simple-await.cpp
experiments/cppgen-sample/: CMakeLists.txt  main.cpp
experiments/event_loop/: CMakeLists.txt  README.md  event_loop.cpp
experiments/raw_wayland/: CMakeLists.txt  main.cpp
experiments/wayland_generator/: CMakeLists.txt  cppbuilder.cpp  cppbuilder.hpp  main.cpp  protocol.hpp  wire_types.hpp
experiments/wayland_generator/cpp/: access_mod.hpp  class.cpp  class.hpp  container.hpp  definition.hpp  document.cpp  enum.hpp  file.cpp  file.hpp  formatter.hpp  function.cpp  function.hpp  incl.hpp  namespace.cpp  namespace.hpp  printer.hpp  simple_decl.cpp  simple_decl.hpp  type.cpp  type.hpp
experiments/waylandcpp-sample/: CMakeLists.txt  main.cpp
include/: bc_statistics.hpp  bc_wayland_client.hpp  bc_wayland_frame_callback.hpp  bc_wayland_info.hpp  bc_wayland_shm.hpp  bc_wayland_surface.hpp  bicycle_engine.hpp  noncopyable.hpp  output.hpp  ui_context.hpp
include/logger/: logger.hpp
include/memory/: bc-shm-file.hpp  bc-shm.hpp  bc_error.hpp  bc_wayland_shm.hpp  bc_wayland_shm_file.hpp  bc_wayland_shm_pool.hpp
include/memory/wayland/: bc_wayland_shm_pool.hpp
include/wayland/: buffer.hpp  display.hpp  interface.hpp  output.hpp  region.hpp  registry.hpp  surface.hpp
include/wayland/interface/: bc_wayland_interface.hpp  bc_wayland_interface_info.hpp  bc_wayland_output.hpp  bc_wayland_shm.hpp  global_object_cache.hpp
libs/: CMakeLists.txt
libs/cpp/: CMakeLists.txt
libs/cpp/include/cpp/: class.hpp  file.hpp  format.hpp  formatter.hpp  function.hpp  incl.hpp  keywords.hpp  simple_decl.hpp  symbols.hpp
libs/cpp/include/cpp/declaration/: class.hpp  declarator.hpp  enum.hpp  function.hpp  includes.hpp  init_declarator_list.hpp  initializer.hpp  namespace.hpp  simple_declarator.hpp  specifier.hpp  statement.hpp  type.hpp
libs/cpp/include/cpp/transform/: text.hpp
libs/cpp/src/: class.cpp  document.cpp  file.cpp
libs/wayland/: CMakeLists.txt
libs/waylandcpp/: CMakeLists.txt
libs/waylandcpp/apps/generator/: cppbuilder.cpp  cppbuilder.hpp  main.cpp
libs/waylandcpp/include/waylandcpp/wire/: buffer_parser.hpp  object_builder.hpp  socket.hpp  types.hpp
libs/waylandcpp/src/: buffer_parser.cpp  object_builder.cpp  socket.cpp
src/: CMakeLists.txt  bc-shm-file.cpp  bc-shm.cpp  bc-statistics.cpp  bc-wayland-client.cpp  bc-wayland-frame-callback.cpp  bc-wayland-shm-file.cpp  bc-wayland-shm-pool.cpp  bc-wayland-shm.cpp  bc-wayland-surface.cpp  bicycle-engine.cpp  ui_context.cpp
src/interface/: bc-wayland-interface.cpp  bc-wayland-output.cpp  bc-wayland-shm.cpp
src/wayland/: display.cpp  output.cpp  registry.cpp  surface.cpp
